--- a/src/main/resources/templates/profileaccount.html
+++ b/src/main/resources/templates/profileaccount.html
@@ -439,7 +439,7 @@
                     margin-right: 310px;
                 }
                 textarea{
-                width: 89%;
+                    width: 89%;
                 }
 
                 .headermb {
@@ -669,6 +669,7 @@
                         <ul>
                             <!--                            <li onclick="changeBackgroundColor(this)">&#127968; Home</li>-->
                             <!--                            <li onclick="changeBackgroundColor(this)">&#127916; Videos</li>-->
+                            <li onclick="changeBackgroundColor(this)">&#127968; <a href="viewforum">Home</a></li>
                             <li onclick="changeBackgroundColor(this)">&#128206; Tags</li>
                             <li onclick="changeBackgroundColor(this)">&#128172; Subjects</li>
                             <li onclick="changeBackgroundColor(this)">&#128140; Categories</li>
@@ -735,14 +736,14 @@
 
             <!-- Phần 4 -->
             <div class="section4">
-                <form action="AddNewBlogAccount" method="POST">
+                <form action="AddNewBlogAccount" method="POST" onsubmit="replaceLineBreaks()">
                     <div class="post">
                         <div class="post-header">
                             <input type="text" class="notclean" placeholder="Title" id="NewTitle" name="NewTitle">
                         </div>
                         <div class="post-content">
                             <!--                                <input type="text" class="" placeholder="Add..." id="NewContent" name="NewContent">-->
-                            <textarea id="NewContent" name="NewContent" rows="4" cols="50" placeholder="Content (limit up to 255 words)"></textarea>
+                            <textarea id="NewContent" name="NewContent" rows="4" cols="50" placeholder="Content (limit up to 5000 characters)"></textarea>
                         </div>
                         <div class="post-footer">
                             <button type="submit" value="AddBlog" class="add">&#128395; Post</button>
@@ -754,6 +755,13 @@
                                             <div class="comment">&#128172;</div>  Biểu tượng comment -->
                     </div>
                 </form>
+
+                <script>
+                    function replaceLineBreaks() {
+                        var paragraphInput = document.getElementById("NewContent");
+                        paragraphInput.value = paragraphInput.value.replace(/\r?\n/g, "<br>");
+                    }
+                </script>
 
 
                 <div th:each="post : ${post}" class="post">
@@ -767,12 +775,17 @@
                         <h2 th:text="${post.title}">title</h2>
                     </div>
                     <div style="border-top: 1px solid #000;"></div>
+                    </br>
                     <div class="post-content">
-                        <p th:text="${post.postContent}">content</p>
+                        <p th:text="${#strings.abbreviate(post.postContent,90)} ">content
                     </div>
+                    </br>
                     <div class="post-content">
-                        <!--                            <a th:href="@{/details/{id}(id=${entity.id})}">Show More</a>-->
+                        <a th:href="@{/details/{id}(id=${post.postId})}">Show More</a>
                     </div>
+                    </br>
+                    </br>
+                    </br>
                     <div class="post-footer">
                         <span class="likes">&#128077; Like</span>
                         <span class="comments">&#128172; Comment</span>
