--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -82,8 +82,8 @@ and open the template in the editor.
             .red{
                 color: red;
             }
-            
-            .usernameUseridError, .userIDError, .useridError, .usernameErrorFormat , .usernameError, .confirmError{
+
+            .usernameUseridError, .userIDError, .useridError, .usernameErrorFormat , .usernameError, .confirmError, .relationshipErrror{
                 color: red;
             }
         </style>
@@ -92,7 +92,7 @@ and open the template in the editor.
         <h1>Please Sign In Your User Information Here!</h1>
         <form action="create" method="POST">
 
-            User ID<input type="text" name="userID" value="" required=""/>
+            User ID<input type="text" name="userID" value="" required="" placeholder="Please enter your FPT University Student Code"/>
             </br>
             <div th:if="${usernameUseridError}" class="usernameUseridError">
                 <p th:text="${usernameUseridError}"></p>
@@ -103,8 +103,10 @@ and open the template in the editor.
             <div th:if="${useridError}" class="useridError">
                 <p th:text="${useridError}"></p>
             </div>
-
-            </br> User Name<input type="text" name="FullName" required=""/>
+            <div th:if="${relationshipErrror}" class="relationshipErrror">
+                <p th:text="${relationshipErrror}"></p>
+            </div>
+            </br> User Name<input type="text" name="FullName" required="" placeholder="Please enter your FPT University Email"/>
             </br>
             <div th:if="${usernameUseridError}" class="usernameUseridError">
                 <p th:text="${usernameUseridError}"></p>
@@ -115,15 +117,19 @@ and open the template in the editor.
             <div th:if="${usernameError}" class="usernameError">
                 <p th:text="${usernameError}"></p>
             </div>
-
+            <div th:if="${relationshipErrror}" class="relationshipErrror">
+                <p th:text="${relationshipErrror}"></p>
+            </div>
             </br> Role ID<input type="text" name="roleID" value="Student" readonly=""/>
 
             <!--            </br> FPT Email<input type="email" name="FPTMail" required=""/>
                         <p class="red" th:text="emailError">${session.emailError}</p>-->
 
-            </br> Password<input type="password" name="Password" required=""/>
-
-            </br> Confirm<input type="password" name="confirm" required=""/>
+            </br> Password<input type="password" name="Password" required="" placeholder="Please enter your Password"/>
+            <div th:if="${passwordFormatError}" class="relationshipErrror">
+                <p th:text="${passwordFormatError}"></p>
+            </div>
+            </br> Confirm<input type="password" name="confirm" required="" placeholder="Please comfirm your Password"/>
             </br>
             <div th:if="${confirmError}" class="confirmError">
                 <p th:text="${confirmError}"></p>
